--- a/Models/Vocoder/2022.06.09_BigVGAN.md
+++ b/Models/Vocoder/2022.06.09_BigVGAN.md
@@ -23,8 +23,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 Despite recent progress in Generative Adversarial Network (GAN)-based vocoders, where the model generates raw waveform conditioned on acoustic features, it is challenging to synthesize high-fidelity audio for numerous speakers across various recording environments.
 In this work, we present ***BigVGAN***, a universal vocoder that generalizes well for various out-of-distribution scenarios without fine-tuning.
@@ -35,8 +34,7 @@ Our ***BigVGAN***, trained only on clean speech (LibriTTS), achieves the state-o
 Listen to audio samples from ***BigVGAN*** at: https://bigvgan-demo.github.io/.
 We release our code and model at: https://github.com/NVIDIA/BigVGAN.
 
-</details>
-<br>
+</td><td>
 
 尽管基于生成对抗网络的声码器在近年来取得了进展, 它们能够以声学特征为条件生成原始波形, 但要为各种不同录音环境下的说话人合成高保真音频仍具有挑战性.
 本项工作中提出了 ***BigVGAN***, 一个通用声码器, 无需微调就能够很好地适应各种分布外场景.
@@ -46,6 +44,8 @@ We release our code and model at: https://github.com/NVIDIA/BigVGAN.
 我们的 BigVGAN, 仅在纯净的语音上训练 (LibriTTS), 取得了在各种零样本 (分布外) 条件的最佳性能, 如未见过的说话人, 语言, 录音环境, 歌声, 音乐和乐器音频.
 你可以在 https://bigvgan-demo.github.io/ 听到 BigVGAN 的音频示例.
 我们在 https://github.com/NVIDIA/BigVGAN 上发布了代码和模型.
+
+</td></tr></table>
 
 ## 1·Introduction: 引言
 
