--- a/Models/SpeechLM/ST2S/2024.01.14_ELLA-V.md
+++ b/Models/SpeechLM/ST2S/2024.01.14_ELLA-V.md
@@ -16,7 +16,7 @@
   - [Github]
   - [Demo](https://ereboas.github.io/ELLAV/)
 - 文件:
-  - [ArXiv](_PDF/2401.07333v1__ELLA-V__Stable_Neural_Codec_Language_Modeling_with_Alignment-Guided_Sequence_Reordering.pdf)
+  - [ArXiv](../_PDF/2401.07333v1__ELLA-V__Stable_Neural_Codec_Language_Modeling_with_Alignment-Guided_Sequence_Reordering.pdf)
   - [Publication] #TODO
 
 </details>
