--- a/Models/SpeechLM/ST2S/2024.06.08_VALL-E_2.md
+++ b/Models/SpeechLM/ST2S/2024.06.08_VALL-E_2.md
@@ -19,12 +19,14 @@
   - [Github]()
   - [Demo](https://aka.ms/valle2)
 - 文件:
-  - [ArXiv](_PDF/2406.05370v2__VALL-E_2__Neural_Codec_Language_Models_are_Human_Parity_Zero-Shot_Text_to_Speech_Synthesizers.pdf)
+  - [ArXiv](../_PDF/2406.05370v2__VALL-E_2__Neural_Codec_Language_Models_are_Human_Parity_Zero-Shot_Text_to_Speech_Synthesizers.pdf)
   - [Publication] #TODO
 
 </details>
 
 ## Abstract: 摘要
+
+<table><tr><td width="50%">
 
 This paper introduces ***VALL-E 2***, the latest advancement in neural codec language models that marks a milestone in zero-shot text-to-speech synthesis (TTS), achieving human parity for the first time.
 Based on its predecessor, VALL-E, the new iteration introduces two significant enhancements:
@@ -36,6 +38,11 @@ It is the first of its kind to reach human parity on these benchmarks.
 Moreover, ***VALL-E 2*** consistently synthesizes high-quality speech, even for sentences that are traditionally challenging due to their complexity or repetitive phrases.
 The advantages of this work could contribute to valuable endeavors, such as generating speech for individuals with aphasia or people with amyotrophic lateral sclerosis.
 See [this https URL](https://aka.ms/valle2) for demos of ***VALL-E 2***.
+
+</details>
+
+本文介绍 ***VALL-E 2***, 神经编解码器语言模型的最新进展,
+
 
 ## 1·Introduction: 引言
 
