--- a/Models/SpeechLM/ST2S/2024.07.11_MELLE.md
+++ b/Models/SpeechLM/ST2S/2024.07.11_MELLE.md
@@ -23,15 +23,14 @@
   - [Github]()
   - [Demo](https://aka.ms/melle)
 - 文件:
-  - [ArXiv](_PDF/2407.08551v1__MELLE__Autoregressive_Speech_Synthesis_without_Vector_Quantization.pdf)
+  - [ArXiv](../_PDF/2407.08551v1__MELLE__Autoregressive_Speech_Synthesis_without_Vector_Quantization.pdf)
   - [Publication] #TODO
 
 </details>
 
 ## Abstract: 摘要
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 We present ***MELLE***, a novel continuous-valued tokens based language modeling approach for text to speech synthesis (TTS).
 ***MELLE*** autoregressively generates continuous mel-spectrogram frames directly from text condition, bypassing the need for vector quantization, which are originally designed for audio compression and sacrifice fidelity compared to mel-spectrograms.
@@ -77,7 +76,7 @@ In response to the aforementioned challenges, we first substitute cross-entropy 
 Second, we design a latent sampling module, derived from variational inference, functions as a sequence sampling strategy thereby enhancing the diversity of the generated audio samples.
 As an option, by adjusting the reduction factor, ***MELLE*** can predict multiple frames at one step and accelerate inference, thereby further alleviating the robustness issues associated with long-sequence modeling and maintaining satisfactory performance.
 
-We conducted evaluations of our ***MELLE*** on both the large-scale 50K-hour [Libriheavy](../../Datasets/2023.09.15_Libriheavy.md) training dataset and the relatively small 960-hour [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md) training dataset.
+We conducted evaluations of our ***MELLE*** on both the large-scale 50K-hour [Libriheavy](../../../Datasets/2023.09.15_Libriheavy.md) training dataset and the relatively small 960-hour [LibriSpeech](../../../Datasets/2015.04.19_LibriSpeech.md) training dataset.
 Following recent works, we use LibriSpeech test-clean set for zero-shot TTS evaluation.
 Experimental results demonstrate that the proposed ***MELLE*** is on par with **VALL-E 2 (2024)** in objective metrics, and surpasses **VALL-E 2 (2024)** in subjective metrics.
 It also outperforms previous neural codec language models, including VALL-E and its other variants, achieving superior performance across multiple metrics that reflect naturalness, robustness, similarity, and inference efficiency.
@@ -89,21 +88,20 @@ For subjective evaluations, ***MELLE*** is more favorably received by human list
 
 ### Traditional TTS: 传统文本转语音
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 Traditional speech synthesis methods can be categorized concatenative systems, parametric systems, and end-to-end neural systems.
 Concatenative TTS systems deconstruct original audio waves into smaller segments and then reassembles them using algorithms like Viterbi, followed by signal processing techniques, to create new audio waves.
 Parametric TTS systems convert speech waves into spectrograms, utilizing acoustic parameters such as fundamental frequency and duration to synthesize new audio outputs.
-With the rapid development of neural networks, end-to-end neural TTS systems are proposed to simplify previous speech synthesis pipeline via a single neural network, eliminating the need for the production of these linguistic and acoustic features ([Tacotron](../Acoustic/2017.03.29_Tacotron.md); [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)).
+With the rapid development of neural networks, end-to-end neural TTS systems are proposed to simplify previous speech synthesis pipeline via a single neural network, eliminating the need for the production of these linguistic and acoustic features ([Tacotron](../../Acoustic/2017.03.29_Tacotron.md); [TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech](../../Acoustic/2019.05.22_FastSpeech.md)).
 
-The advanced end-to-end neural TTS models, such as [Tacotron](../Acoustic/2017.03.29_Tacotron.md), [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md), and [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md), usually generate mel-spectrograms directly from texts, then synthesize the audio results from the mel-spectrogram by a vocoder such as **WaveNet (2016)**.
+The advanced end-to-end neural TTS models, such as [Tacotron](../../Acoustic/2017.03.29_Tacotron.md), [TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md), and [FastSpeech](../../Acoustic/2019.05.22_FastSpeech.md), usually generate mel-spectrograms directly from texts, then synthesize the audio results from the mel-spectrogram by a vocoder such as **WaveNet (2016)**.
 TransformerTTS employs Transformer-based encoder-decoder network as the main framework to replace RNN structures in Tacotron.
 FastSpeech further improve the speech quality and decoding efficiency using the non-autoregressive generation model with a duration module.
 These model are trained on small-scale, clean, single-speaker or few-speaker dataset, such as LJSpeech and LibriTTS.
 Our ***MELLE*** leverages the well-established mel-spectrogram as the intermediate representation, however, it differs significantly in two key aspects:
 (1) we adopt decoder-only network as foundational structure with improved methods, such as variational inference and spectrogram flux loss,
-(2) ***MELLE*** is capable of zero-shot TTS via training on large-scale speech-text paired data, like [Libriheavy](../../Datasets/2023.09.15_Libriheavy.md).
+(2) ***MELLE*** is capable of zero-shot TTS via training on large-scale speech-text paired data, like [Libriheavy](../../../Datasets/2023.09.15_Libriheavy.md).
 
 </details>
 <br>
@@ -125,24 +123,23 @@ Our ***MELLE*** leverages the well-established mel-spectrogram as the intermedia
 
 ### Zero-Shot TTS: 零样本文本转语音
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 Motivated by the zero-shot and in-context learning capabilities of large language models (LLMs) on natural language processing (NLP) tasks, various research works are proposed to address zero-shot TTS through a language modeling approach.
 **VALL-E (2023)** first regards TTS tasks as a conditional language task, which utilizes neural codec codes as intermediate representation instead of mel-spectrogram, then uses a codec decoder to recover the waveform from predicted codec codes.
 VALL-E employs two-stage modeling method, with an autoregressive model for generating coarse audio tokens, followed by a non-autoregressive model to iteratively predict multi-codebook codes for refinement.
 **VALL-E X (2023)** extends VALL-E into multi-lingual scenario to support zero-shot cross-lingual speech synthesis and speech-to-speech translation.
-[Mega-TTS](2023.06.06_Mega-TTS.md) proposes to disentangle the multiple attributes in speech, such as content, timbre, prosody, and phase attributes, then model each of them according to their intrinsic properties with a language modeling approach.
-**ELLA-V (2024)**, [RALL-E](2024.04.04_RALL-E.md), and [VALL-E R](2024.06.12_VALL-E_R.md) aims to improve robustness and stability of VALL-E via additional fine-grained speech-text alignment information.
-[BASE TTS](2024.02.12_BASE-TTS.md) employs discrete tokens derived from [WavLM](../SpeechRepresentation/2021.10.26_WavLM.md) and scales the codec language model to larger parameters and training data.
-[Seed-TTS](2024.06.04_Seed-TTS.md) replaces NAR model in VALL-E with a diffusion model, which generates continuous speech representations according generated speech tokens from AR stage.
+[Mega-TTS](../2023.06.06_Mega-TTS.md) proposes to disentangle the multiple attributes in speech, such as content, timbre, prosody, and phase attributes, then model each of them according to their intrinsic properties with a language modeling approach.
+**ELLA-V (2024)**, [RALL-E](ST2S/2024.04.04_RALL-E.md-E.md), and [VALL-2024.06.12_VALL-E_R.md_R.md) aims to improve robustness and stability of VALL-E via additional fine-grained speech-text alignment information.
+[BASE TTS](ST2S/2024.02.12_BASE-TTS.mdTS.md) employs discrete tokens derived from [WavLM](../../../SpeechRepresentation/2021.10.26_WavLM.mdnd scales the codec language model to larger parameters and training data.
+[Seed-TTS](../2024.06.04_Seed-TTS.md) replaces NAR model in VALL-E with a diffusion model, which generates continuous speech representations according generated speech tokens from AR stage.
 In parallel to our work, **VALL-E 2 (2024)** shares the same architecture as VALL-E but employs a repetition-aware sampling strategy that promotes more deliberate sampling choices.
 
 Other studies have investigated fully non-autoregressive approaches to increase the speed of model inference.
-For instance, [SoundStorm](2023.05.16_SoundStorm.md) adapts a parallel, non-autoregressive, confidence-based decoding scheme for the generation of codec codes.
-[StyleTTS2](2023.06.13_StyleTTS2.md) and [NaturalSpeech 3](../Diffusion/2024.03.05_NaturalSpeech3.md) use diffusion model to achieve better TTS synthesis.
-[Voicebox](2023.06.23_VoiceBox.md) and [Audiobox](2023.12.25_Audiobox.md) employ non-autoregressive flow-matching based models for transcript-guided speech generation.
-Recently, [E2 TTS](../Diffusion/2024.06.26_E2_TTS.md) presents a fully non-autoregressive TTS systems consisting of flow-matching-based mel-spectrogram generator trained with the audio infilling task, and a vocoder.
+For instance, [SoundStorm](../2023.05.16_SoundStorm.md) adapts a parallel, non-autoregressive, confidence-based decoding scheme for the generation of codec codes.
+[StyleTTS2](../2023.06.13_StyleTTS2.md) and [NaturalSpeech 3](../../Diffusion/2024.03.05_NaturalSpeech3.md) use diffusion model to achieve better TTS synthesis.
+[Voicebox](../2023.06.23_VoiceBox.md) and [Audiobox](../2023.12.25_Audiobox.md) employ non-autoregressive flow-matching based models for transcript-guided speech generation.
+Recently, [E2 TTS](../../Diffusion/2024.06.26_E2_TTS.md) presents a fully non-autoregressive TTS systems consisting of flow-matching-based mel-spectrogram generator trained with the audio infilling task, and a vocoder.
 Different previous works, ***MELLE*** leverages continuous-valued tokens based autoregressive language modeling approach with variational inference for text-to-speech synthesis.
 
 </details>
@@ -171,8 +168,7 @@ Different previous works, ***MELLE*** leverages continuous-valued tokens based a
 
 ### 3.1·Problem Formulation: Mel-Spectrogram Language Modeling <br> 问题形式化: 梅尔频谱语言建模
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 This study regards zero-shot TTS as an autoregressive mel-spectrogram language modeling task.
 Instead of predicting highly-compressed neural codec codes like VALL-E and its variants, ***MELLE*** directly predicts continuous mel-spectrograms which are then converted to waveforms with an off-the-shelf vocoder.
@@ -187,7 +183,7 @@ $$
 
 where $\pmb{y}_{<t}$ denotes $[\pmb{y}_0, \pmb{y}_1,..., \pmb{y}_{t-1}]$ and $\theta$ represents the parameters of ***MELLE***.
 
-Inspired by previous neural TTS models ([TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md)), we can also set a reduction factor $r$ (e.g., 2 or 4) to control the number of mel-spectrogram frames predicted at each decoding step, providing a balance between computational efficiency and the generation of high-quality speech.
+Inspired by previous neural TTS models ([TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md)), we can also set a reduction factor $r$ (e.g., 2 or 4) to control the number of mel-spectrogram frames predicted at each decoding step, providing a balance between computational efficiency and the generation of high-quality speech.
 Formally, the original mel-spectrogram sequences $\pmb{y}$ will be partitioned into $\pmb{y}^r = [\pmb{y}_{0:r}, \pmb{y}_{r:2r}, ..., \pmb{y}_{(T-r):T}]$ with reduction factor $r$, and the likelihood function can be expressed as follows:
 
 $$
@@ -224,12 +220,11 @@ $$
 
 ### 3.2·Architecture: 架构
 
-![Images/2024.07.11_MELLE_Fig.01.png](Images/2024.07.11_MELLE_Fig.01.png)
+![Images/2024.07.11_MELLE_Fig.01.png](../Images/2024.07.11_MELLE_Fig.01.png)
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
-As illustrated in Figure.01, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md)).
+As illustrated in Figure.01, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../../Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md)).
 Finally, a vocoder is used to recover the speech from generated mel-spectrogram.
 
 Unlike neural codec language models that iteratively predict multi-layer codec codes, we do not require an additional non-autoregressive (NAR) model thanks to the completeness of the mel-spectrogram.
@@ -253,8 +248,7 @@ Moreover, by adjusting the reduction factor, ***MELLE*** can generate multiple m
 
 #### 3.2.1·Autoregressive Language Model: 自回归语言模型
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 We employ a unidirectional Transformer decoder as the language model (LM) to autoregressively generates acoustic continuous features based on the textual input and acoustic prompts.
 Specifically, input text tokens $\pmb{x}$, with an appended <EOS> token, are first converted into embeddings by the text embedding layer based on their indices.
@@ -273,13 +267,12 @@ The output of the LM $\pmb{e}_t$ at time step $t$ is subsequently processed by t
 
 #### 3.2.2·Latent Sampling Module: 隐采样模块
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 Sampling strategy is an critical part in TTS systems, as it not only introduces diversity in the output, but also enhances the generalization ability of the model.
-For example, Tacotron-like models ([Tacotron](../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../Acoustic/2017.12.16_Tacotron2.md)) enable dropout in their pre-net during inference to introduce variation;
+For example, Tacotron-like models ([Tacotron](../../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Acoustic/2017.12.16_Tacotron2.md)) enable dropout in their pre-net during inference to introduce variation;
 Neural codec language models (**VALL-E (2023)**; **VALL-E X (2023)**) adopt the top-p random sampling to avoid the collapse outputs leading by greedy search;
-Diffusion-based ([NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)) and flow-matching-based methods ([Voicebox](2023.06.23_VoiceBox.md)) restore speech representations from the sampling of a simpler distribution.
+Diffusion-based ([NaturalSpeech2](../../Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../../Diffusion/2024.03.05_NaturalSpeech3.md)) and flow-matching-based methods ([Voicebox](../2023.06.23_VoiceBox.md)) restore speech representations from the sampling of a simpler distribution.
 
 In this study, inspired by variational autoencoders (VAEs) \citep{kingma2014vae, blei2017vi_review}, we integrate a novel latent sampling module within ***MELLE***, aimed at enhancing both expressive diversity and robustness, as shown in Figure \ref{fig:modules} (left).
 Based on $\pmb{e}_t$, the output of the LM, this module predicts a distribution, from which a latent embedding $\pmb{z}_t$ is sampled.
@@ -306,7 +299,7 @@ Note that the latent sampling module is differentiable with the reparameterizati
 </details>
 <br>
 
-![](Images/2024.07.11_MELLE_Fig.02.png)
+![](../Images/2024.07.11_MELLE_Fig.02.png)
 
 采样策略是文本转语音系统的核心部分, 不仅在输出中引入多样性, 还能增强模型的泛化能力.
 例如, Tacotron 类模型在推理时在他们的预网络中启用随机失活以引入变化.
@@ -336,12 +329,11 @@ $$
 
 #### 3.2.3·Stop Prediction Layer and Post-Net: 停止预测层和后网络
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 Since ***MELLE*** directly predicts continuous mel-spectrograms rather than discrete tokens, it cannot generate an `<EOS>` token to indicate the end of generation.
 Instead, we use a linear layer as a binary classifier, taking $\pmb{e}_t$ to determine if the generation should conclude, as depicted in Figure \ref{fig:modules} (mid).
-Following previous neural TTS models ([Tacotron](../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right).
+Following previous neural TTS models ([Tacotron](../../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../../Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right).
 During training, the model is trained using teacher-forcing; while during inference, post-net processes $\pmb{y}'$ after the AR generation concludes.
 
 </details>
@@ -356,8 +348,7 @@ During training, the model is trained using teacher-forcing; while during infere
 
 ### 3.3·Training Objective: 训练目标
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 The training process of ***MELLE*** is efficient and straightforward, due to the absence of VALL-E's complex hierarchical structure.
 As illustrated in Figure.01, during training, a single end-to-end autoregressive model is optimized with the teacher-forcing manner using four loss functions: (1) a regression loss; (2) a Kullback-Leibler (KL) divergence loss; (3) a novel spectrogram flux loss; and (4) a binary cross entropy (BCE) loss for stop prediction.
@@ -378,10 +369,9 @@ $$
 
 #### Regression Loss: 回归损失
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
-The regression loss is a fundamental component of the training objective, ensuring the accurate prediction of mel-spectrogram frames, like conventional TTS ([TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md)).
+The regression loss is a fundamental component of the training objective, ensuring the accurate prediction of mel-spectrogram frames, like conventional TTS ([TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md)).
 The regression loss, $\mathcal{L}_{\text{reg}}$, is composed of a combination of L1 and L2 losses, applied to both intermediate prediction $\pmb{y}'$ and final prediction $\pmb{y}''$ of the mel-spectrogram.
 It is defined as follows:
 
@@ -412,8 +402,7 @@ $$
 
 #### KL Divergence Loss: KL散度损失
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 We introduce a Kullback-Leibler (KL) divergence loss based on the concept of variational inference \citep{kingma2014vae, blei2017vi_review}, to enhance the diversity and stability of ***MELLE***.
 The KL divergence measures the difference between the predicted latent distribution $p_\theta(\pmb{z}_t \mid \pmb{e}_t)$ and a simpler distribution $p(\pmb{z}_t)$.
@@ -437,8 +426,7 @@ $$
 \end{aligned}
 $$
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 where \( d \) is the dimensionality of the feature space.
 The detailed derivation is provided in Appendix \ref{appendix:derivation}.
@@ -453,8 +441,7 @@ By integrating the KL divergence into the loss function, ***MELLE*** achieves a 
 
 #### The Spectrogram Flux Loss: 频谱流动损失
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 To encourage the dynamic variation of the generated mel-spectrogram frames, we propose a novel spectrogram flux loss as a regularization term.
 This loss function penalizes low variability between consecutive frames, thereby promoting changes and preventing the generation of overly static mel-spectrograms:
@@ -489,10 +476,9 @@ $$
 
 #### Stop Prediction Loss: 停止预测损失
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
-We use a linear layer to project the output of the LM to a logit and calculate the BCE loss, $\mathcal{L}_{\text{stop}}$, for stop prediction, like [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md) and [SpeechT5](2021.10.14_SpeechT5.md).
+We use a linear layer to project the output of the LM to a logit and calculate the BCE loss, $\mathcal{L}_{\text{stop}}$, for stop prediction, like [TransformerTTS](../../Acoustic/2018.09.19_TransformerTTS.md) and [SpeechT5](../ST2ST/2021.10.14_SpeechT5.md).
 During this calculation, positive and negative frames are extremely imbalanced, as each utterance has only one positive frame indicating "stop." To address this, we impose a larger weight (100) for the positive frames in the BCE loss.
 
 </details>
@@ -504,8 +490,7 @@ During this calculation, positive and negative frames are extremely imbalanced, 
 
 ### 3.4·Inference: In-Context Learning for Mel-Spectrogram<br>推理: 梅尔频谱的上下文学习
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 During inference, we perform zero-shot text-to-speech by autoregressively predicting the mel-spectrogram.
 Given the text content $\pmb{x}$ for synthesis, and a piece of speech prompt (with text transcription $\tilde{\pmb{x}}$ and mel-spectrogram $\tilde{\pmb{y}}$), at each time step \( t \), ***MELLE*** generates the next-frame mel-spectrogram \( \pmb{y}_t' \) from a latent embedding $\pmb{z}_t$, which is sampled from a distribution conditioned on the concatenation of $\tilde{\pmb{x}}$, $\pmb{x}$, $\tilde{\pmb{y}}$, and $\pmb{y}_{<t}$.
@@ -538,8 +523,7 @@ With the strong in-context learning capability from LLM, ***MELLE*** is capable 
 
 ## 6·Conclusions: 结论
 
-<details>
-<summary>原文</summary>
+<table><tr><td width="50%">
 
 In this study, we propose a continuous acoustic representation-based language modeling approach for zero-shot text-to-speech synthesis tasks, thereby eliminating the use of discrete vector quantization.
 By exploring the potential of mel-spectrograms within the paradigm of language modeling, the proposed ***MELLE*** directly predicts mel-spectrograms conditioned on text content and speech prompt.
