--- a/Models/Vocoder/2015.11.11_WORLD.md
+++ b/Models/Vocoder/2015.11.11_WORLD.md
@@ -21,6 +21,8 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 A vocoder-based speech synthesis system, named ***WORLD***, was developed in an effort to improve the sound quality of real-time applications using speech.
 Speech analysis, manipulation, and synthesis on the basis of vocoders are used in various kinds of speech research.
 Although several high-quality speech synthesis systems have been developed, real-time processing has been difficult with them because of their high computational costs.
@@ -31,14 +33,54 @@ Its processing speed was also compared with those of conventional systems.
 The results showed that ***WORLD*** was superior to the other systems in terms of both sound quality and processing speed.
 In particular, it was over ten times faster than the conventional systems, and the real time factor (RTF) indicated that it was fast enough for real-time processing.
 
+</td><td>
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
