--- a/Models/Vocoder/2018.02.12_WaveGAN.md
+++ b/Models/Vocoder/2018.02.12_WaveGAN.md
@@ -21,16 +21,58 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 Audio signals are sampled at high temporal resolutions, and learning to synthesize audio requires capturing structure across a range of timescales. Generative adversarial networks (GANs) have seen wide success at generating images that are both locally and globally coherent, but they have seen little application to audio generation. In this paper we introduce WaveGAN, a first attempt at applying GANs to unsupervised synthesis of raw-waveform audio. WaveGAN is capable of synthesizing one second slices of audio waveforms with global coherence, suitable for sound effect generation. Our experiments demonstrate that, without labels, WaveGAN learns to produce intelligible words when trained on a small-vocabulary speech dataset, and can also synthesize audio from other domains such as drums, bird vocalizations, and piano. We compare WaveGAN to a method which applies GANs designed for image generation on image-like audio feature representations, finding both approaches to be promising.
+
+</td><td>
+
+</td></tr></table>
 
 ## 1·Introduction: 引言
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 2·Related Works: 相关工作
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 3·Methodology: 方法
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 4·Experiments: 实验
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
