--- a/Models/Vocoder/2019.09.25_GAN-TTS.md
+++ b/Models/Vocoder/2019.09.25_GAN-TTS.md
@@ -26,6 +26,8 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 Generative adversarial networks have seen rapid development in recent years and have led to remarkable improvements in generative modelling of images.
 However, their application in the audio domain has received limited attention, and autoregressive models, such as WaveNet, remain the state of the art in generative modelling of audio signals such as human speech.
 To address this paucity, we introduce GAN-TTS, a Generative Adversarial Network for Text-to-Speech.
@@ -35,14 +37,54 @@ To measure the performance of GAN-TTS, we employ both subjective human evaluatio
 We show that GAN-TTS is capable of generating high-fidelity speech with naturalness comparable to the state-of-the-art models, and unlike autoregressive models, it is highly parallelisable thanks to an efficient feed-forward generator.
 Listen to GAN-TTS reading this abstract at this https URL.
 
+</td><td>
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
