--- a/Models/Vocoder/2019.12.03_WaveFlow.md
+++ b/Models/Vocoder/2019.12.03_WaveFlow.md
@@ -22,6 +22,8 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 In this work, we propose WaveFlow, a small-footprint generative flow for raw audio, which is directly trained with maximum likelihood.
 It handles the long-range structure of 1-D waveform with a dilated 2-D convolutional architecture, while modeling the local variations using expressive autoregressive functions.
 WaveFlow provides a unified view of likelihood-based models for 1-D data, including WaveNet and WaveGlow as special cases.
@@ -30,14 +32,54 @@ Furthermore, it can significantly reduce the likelihood gap that has existed bet
 Finally, our small-footprint WaveFlow has only 5.91M parameters, which is 15× smaller than WaveGlow.
 It can generate 22.05 kHz high-fidelity audio 42.6× faster than real-time (at a rate of 939.3 kHz) on a V100 GPU without engineered inference kernels.
 
+</td><td>
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
