--- a/Models/Vocoder/2020.07.30_VocGAN.md
+++ b/Models/Vocoder/2020.07.30_VocGAN.md
@@ -23,6 +23,8 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 We present a novel high-fidelity real-time neural vocoder called VocGAN.
 A recently developed GAN-based vocoder, MelGAN, produces speech waveforms in real-time.
 However, it often produces a waveform that is insufficient in quality or inconsistent with acoustic characteristics of the input mel spectrogram.
@@ -33,14 +35,54 @@ In experiments, VocGAN synthesizes speech waveforms 416.7x faster on a GTX 1080T
 Compared with MelGAN, it also exhibits significantly improved quality in multiple evaluation metrics including mean opinion score (MOS) with minimal additional overhead.
 Additionally, compared with Parallel WaveGAN, another recently developed high-fidelity vocoder, VocGAN is 6.98x faster on a CPU and exhibits higher MOS.
 
+</td><td>
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
