--- a/Models/Vocoder/2020.09.21_DiffWave.md
+++ b/Models/Vocoder/2020.09.21_DiffWave.md
@@ -23,6 +23,8 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 In this work, we propose DiffWave, a versatile diffusion probabilistic model for conditional and unconditional waveform generation.
 The model is non-autoregressive, and converts the white noise signal into structured waveform through a Markov chain with a constant number of steps at synthesis.
 It is efficiently trained by optimizing a variant of variational bound on the data likelihood.
@@ -30,14 +32,54 @@ DiffWave produces high-fidelity audios in different waveform generation tasks, i
 We demonstrate that DiffWave matches a strong WaveNet vocoder in terms of speech quality (MOS: 4.44 versus 4.43), while synthesizing orders of magnitude faster.
 In particular, it significantly outperforms autoregressive and GAN-based waveform models in the challenging unconditional generation task in terms of audio quality and sample diversity from various automatic and human evaluations.
 
+</td><td>
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
