--- a/Models/Vocoder/2021.06.04_Fre-GAN.md
+++ b/Models/Vocoder/2021.06.04_Fre-GAN.md
@@ -22,6 +22,8 @@
 
 ## Abstract: 摘要
 
+<table><tr><td width="50%">
+
 Although recent works on neural vocoder have improved the quality of synthesized audio, there still exists a gap between generated and ground-truth audio in frequency space.
 This difference leads to spectral artifacts such as hissing noise or reverberation, and thus degrades the sample quality.
 In this paper, we propose Fre-GAN which achieves frequency-consistent audio synthesis with highly improved generation quality.
@@ -29,14 +31,54 @@ Specifically, we first present resolution-connected generator and resolution-wis
 Additionally, to reproduce high-frequency components accurately, we leverage discrete wavelet transform in the discriminators.
 From our experiments, Fre-GAN achieves high-fidelity waveform generation with a gap of only 0.03 MOS compared to ground-truth audio while outperforming standard models in quality.
 
+</td><td>
+
+</td></tr></table>
+
 ## 1·Introduction: 引言
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 2·Related Works: 相关工作
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 3·Methodology: 方法
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
 
 ## 4·Experiments: 实验
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 5·Results: 结果
 
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
 ## 6·Conclusions: 结论
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
